# rust-rstnt-api

./: .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-127515e7aeca05938c62e3d0fb463314507b528f7e3565e89b698f990cfaaa66.json  query-90c1dcf52bd806288b6a19b14078520a8ff8f395930dcd38e6fe3b953ae41f6e.json  query-fe14280d7a311c483e68ff453de0238c6e2636e005a5827c0ade443e4a9ded32.json
migrations/: 1902241834_tables.sql  1902241835_table_items.sql
src/: client.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  restaurant.rs  seed.rs  server.rs
tests/: restaurant_test.rs
